Padding working for llama-2-7b

--- a/lightcode/relay/padding.ipynb
+++ b/lightcode/relay/padding.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, Cache\n",
     "\n",
     "\n",
     "import onnx\n",
@@ -25,67 +25,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids      : tensor([[    2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
+      "             2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]])\n",
+      "attention_mask : tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1]])\n"
+     ]
+    }
+   ],
    "source": [
     "def tokenize_input_padding(prompt, tokenizer):\n",
-    "    return tokenizer(prompt, padding='max_length', truncation=True, max_length=10, return_tensors='pt')\n",
+    "    return tokenizer(prompt, padding='max_length', truncation=True, max_length=20, return_tensors='pt')\n",
     "    # return tokenizer(prompt, padding='max_length', truncation=True, return_tensors='pt')\n",
     "    # return tokenizer(prompt, padding=True, return_tensors='pt')\n",
-    "    # return tokenizer(prompt, return_tensors='pt')\n",
+    "    # return tokenizer(prompt, return_tensors= 'pt')\n",
     "\n",
     "\n",
-    "model_name = 'gpt2'\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
-    "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
+    "# model_name = 'gpt2'\n",
+    "# tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
+    "# model = GPT2LMHeadModel.from_pretrained(model_name)\n",
     "\n",
-    "# model_name = \"meta-llama/Llama-2-7b-hf\"\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "# model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "model_name = \"meta-llama/Llama-2-7b-hf\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.padding_side = 'left'\n",
     "\n",
     "model.eval()\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
     "device = torch.device(\"cpu\")\n",
     "model = model.to(device)\n",
     "\n",
-    "prompt = \"My favorite music is  \"\n",
+    "prompt = \"My favorite music is \"\n",
     "# prompt = \"In a galaxy far, far away \"\n",
     "\n",
-    "inputs = tokenize_input_padding(prompt, tokenizer)\n"
+    "inputs = tokenize_input_padding(prompt, tokenizer)\n",
+    "for i in inputs:\n",
+    "    print(f'{i:<15}: {inputs[i]}' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([464])\n",
-      "torch.Size([1, 12, 10, 64])\n",
-      "tensor(-1.0961)\n",
-      "tensor(-2.2123)\n",
-      "tensor(-2.2993)\n",
-      "tensor(-1.9828)\n",
-      "tensor(-2.2604)\n",
-      "tensor(-2.2253)\n",
-      "tensor(-1.2784)\n",
-      "tensor(-1.2625)\n",
-      "tensor(-1.3025)\n",
-      "tensor(-1.3278)\n"
+      "tensor([29947])\n",
+      "torch.Size([1, 32, 20, 128])\n"
      ]
     }
    ],
    "source": [
+    "# Prefill\n",
     "input_ids = inputs[\"input_ids\"].to(device)\n",
     "attention_mask = inputs[\"attention_mask\"].to(device)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "    outputs = model(input_ids, attention_mask=attention_mask,)\n",
     "\n",
     "logits = outputs[0]\n",
     "kv_cache = outputs[1]\n",
@@ -93,58 +105,69 @@
     "last_token_id = torch.argmax(logits[:, -1, :], dim=-1)\n",
     "\n",
     "print(last_token_id)\n",
+    "# [(kv)(kv)(kv)]\n",
     "print(kv_cache[0][0].shape)\n",
     "\n",
-    "for i in kv_cache[0][0][0][0]:\n",
-    "    print(i[0])"
+    "# for i in kv_cache[0][0][0][0]:\n",
+    "#     print(i[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 12, 11, 64])\n",
-      "tensor(-1.0961)\n",
-      "tensor(-2.2123)\n",
-      "tensor(-2.2993)\n",
-      "tensor(-1.9828)\n",
-      "tensor(-2.2604)\n",
-      "tensor(-2.2253)\n",
-      "tensor(-1.2784)\n",
-      "tensor(-1.2625)\n",
-      "tensor(-1.3025)\n",
-      "tensor(-1.3278)\n",
-      "tensor(-1.7075)\n",
-      "My favorite music is  The New\n"
+      "torch.Size([1, 32, 20, 128]) - 29947\n",
+      "torch.Size([1, 32, 21, 128]) - 29900\n",
+      "torch.Size([1, 32, 22, 128]) - 29879\n",
+      "torch.Size([1, 32, 23, 128]) - 29892\n",
+      "torch.Size([1, 32, 24, 128]) - 322\n",
+      "torch.Size([1, 32, 25, 128]) - 29871\n",
+      "torch.Size([1, 32, 26, 128]) - 29900\n",
+      "torch.Size([1, 32, 27, 128]) - 29871\n",
+      "torch.Size([1, 32, 28, 128]) - 29900\n",
+      "torch.Size([1, 32, 29, 128]) - 29900\n",
+      "torch.Size([1, 32, 30, 128]) - 29900\n",
+      "torch.Size([1, 32, 31, 128]) - 29900\n",
+      "torch.Size([1, 32, 32, 128]) - 29900\n",
+      "torch.Size([1, 32, 33, 128]) - 29900\n",
+      "torch.Size([1, 32, 34, 128]) - 29900\n",
+      "torch.Size([1, 32, 35, 128]) - 29900\n",
+      "tensor([[    2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
+      "             2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]]) + [29947, 29900, 29879, 29892, 322, 29871, 29900, 29871, 29900, 29900, 29900, 29900, 29900, 29900, 29900, 29900]\n",
+      "My favorite music is  80s, and 0 00000000\n"
      ]
     }
    ],
    "source": [
+    "# Decoder\n",
     "generated = [last_token_id.item()]\n",
-    "for i in range(1):\n",
+    "print(f'{kv_cache[0][0].shape} - {last_token_id.item()}')\n",
+    "for i in range(15):\n",
     "    last_token_id = torch.tensor([[last_token_id]], device=device)\n",
     "    with torch.no_grad():\n",
     "        outputs = model(last_token_id, past_key_values=kv_cache)\n",
     "\n",
+    "\n",
     "    logits = outputs[0]\n",
     "    kv_cache = outputs[1]\n",
-    "    print(kv_cache[0][0].shape)\n",
     "\n",
     "\n",
     "    last_token_id = torch.argmax(logits[:, -1, :], dim=-1)\n",
+    "    print(f'{kv_cache[0][0].shape} - {last_token_id.item()}')\n",
     "\n",
     "    generated.append(last_token_id.item())\n",
     "\n",
-    "for i in kv_cache[0][0][0][0]:\n",
-    "    print(i[0])\n",
+    "# for i in kv_cache[0][0][0][0]:\n",
+    "#     print(i[1])\n",
     "\n",
+    "print(f'{input_ids} + {generated}')\n",
     "generated_text = tokenizer.decode(generated, skip_special_tokens=True)\n",
-    "print(f'{prompt}{generated_text}')\n"
+    "print(f'{prompt} {generated_text}')\n"
    ]
   },
   {
@@ -156,108 +179,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
-      "A decoder-only architecture is being used, but right-padding was detected! For correct generation results, please set `padding_side='left'` when initializing the tokenizer.\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.23it/s]\n",
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input IDs: tensor([[  464,  2068,  7586, 21831, 50256, 50256],\n",
-      "        [   73,  8142,   625,   262, 16931,  3290],\n",
-      "        [ 1870,   788,  4539,  1497, 50256, 50256]])\n",
-      "Attention Mask: tensor([[1, 1, 1, 1, 0, 0],\n",
-      "        [1, 1, 1, 1, 1, 1],\n",
-      "        [1, 1, 1, 1, 0, 0]])\n"
+      "Input IDs: tensor([[    2,     1,   450,  4996, 17354,  1701, 29916],\n",
+      "        [    1,   432, 17204,   975,   278, 17366, 11203],\n",
+      "        [    2,     2,     1,  1126,   769,  6057,  3448],\n",
+      "        [    2,     1,  1619, 25448,  4696,   338, 29871]])\n",
+      "Attention Mask: tensor([[0, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1],\n",
+      "        [0, 0, 1, 1, 1, 1, 1],\n",
+      "        [0, 1, 1, 1, 1, 1, 1]])\n",
+      "sequence 0:\n",
+      "The quick brown fox jumps over the lazy dog.\n",
+      "The quick brown fox jumps over the lazy dog.\n",
+      "\n",
+      "sequence 1:\n",
+      "jumps over the lazy dog.\n",
+      "The dog is not lazy,\n",
+      "but the cat is.\n",
+      "The cat is not lazy\n",
+      "\n",
+      "sequence 2:\n",
+      "And then runs away.\n",
+      "I'm not sure what to make of this. I'm not sure what to\n",
+      "\n",
+      "sequence 3:\n",
+      "My favorite music is 80s music. I love the 80s. I love the music, the fashion\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "from transformers import GPT2Tokenizer, GPT2Model\n",
+    "# With Padding Batched\n",
     "\n",
-    "# Initialize the tokenizer and model\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
+    "# tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "# model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/llama-2-7b-hf\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/llama-2-7b-hf\")\n",
     "\n",
     "\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.padding_side = 'left'\n",
+    "\n",
     "\n",
     "# List of sequences\n",
     "sequences = [\n",
     "    \"The quick brown fox\",\n",
     "    \"jumps over the lazy dog\",\n",
-    "    \"And then runs away\"\n",
+    "    \"And then runs away\",\n",
+    "    \"My favorite music is \",\n",
     "]\n",
     "\n",
     "# Tokenize and pad sequences\n",
     "inputs = tokenizer(sequences, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
     "\n",
     "generated_outputs = model.generate(\n",
     "    input_ids=inputs['input_ids'],\n",
     "    attention_mask=inputs['attention_mask'],\n",
     "    max_length=inputs['input_ids'].shape[1] + 20,\n",
     "    num_return_sequences=1,\n",
-    "    do_sample=False\n",
+    "    do_sample=False,\n",
+    "    pad_token_id=tokenizer.eos_token_id,\n",
+    "    temperature=None,\n",
+    "    top_p=None,\n",
     ")\n",
     "\n",
     "print(\"Input IDs:\", inputs['input_ids'])\n",
-    "print(\"Attention Mask:\", inputs['attention_mask'])\n"
+    "print(\"Attention Mask:\", inputs['attention_mask'])\n",
+    "\n",
+    "for idx, gen in enumerate(generated_outputs):\n",
+    "    print(f'sequence {idx}:')\n",
+    "    print (tokenizer.decode(gen, skip_special_tokens=True))\n",
+    "    print()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 104,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Sequence: The quick brown fox\n",
-      "Generated Text: The quick brown foxThe quick brown foxThe quick brown foxThe quick brown foxThe quick brown foxThe quick brown fox\n",
-      "\n",
-      "Input Sequence: jumps over the lazy dog\n",
-      "Generated Text: jumps over the lazy dog.\n",
-      "\n",
-      "\"I'm not going to be able to do that,\" he said. \"I\n",
-      "\n",
-      "Input Sequence: And then runs away\n",
-      "Generated Text: And then runs awayThe next day, he's back in the hospital, and he's still in the hospital. He\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "predicted_token_ids = torch.argmax(logits, dim=-1)\n",
+    "## GPT2\n",
+    "**Sequence 1 : \"The quick brown fox 50256, 50256\"**\n",
+    "    batched&padded: The quick brown foxThe quick brown foxThe quick brown foxThe quick brown foxThe quick brown foxThe quick brown fox\n",
+    "    regular: The quick brown foxes are a great way to get a little bit of a kick out of your dog. The quick\n",
     "\n",
-    "generated_texts = [tokenizer.decode(output_ids, skip_special_tokens=True) for output_ids in generated_outputs]\n",
+    "**Sequence 2 : \"jumps over the lazy dog\"**\n",
+    "    batched&padded: jumps over the lazy dog. \"I'm not going to be able to do that,\" he said. \"I\n",
+    "    regular:jumps over the lazy dog. \"I'm not going to be able to do that,\" he said. \"I\n",
     "\n",
-    "for i, text in enumerate(generated_texts):\n",
-    "    print(f\"Input Sequence: {sequences[i]}\")\n",
-    "    print(f\"Generated Text: {text}\\n\")\n"
+    "**Sequence 3 : \"And then runs away 50256 \"**\n",
+    "    batched&padded: And then runs awayThe next day, he's back in the hospital, and he's still in the hospital. He\n",
+    "    regular: And then runs away. The next day, he was arrested for driving under the influence. He was charged with\n",
+    "\n",
+    "**Sequence 4 : \"My favorite music is 50256, 50256\"**\n",
+    "    batched&padded: My favorite music is The Beatles. I love the Beatles. I love the Beatles. I love the Beatles. I love\n",
+    "    regular: My favorite music is  the  \"The Last of Us\" by the Grateful Dead. I love the song, but I\n",
+    "\n",
+    "    Everythign that was padded changed ...  \n",
+    "\n",
+    "\n",
+    "## Llama-2-7b-hf \n",
+    "**Different results, but both are equally valid** \n",
+    "MUST PAD FROM THE LEFT FOR LLAMA RESULTS TO BE OKISH"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
