llama padding with kv_cache slash

--- a/lightcode/relay/padding.ipynb
+++ b/lightcode/relay/padding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,29 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.25it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.24it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input_ids      : tensor([[    2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]])\n",
-      "attention_mask : tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1]])\n"
+      "input_ids      : tensor([[    2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]])\n",
+      "attention_mask : tensor([[0, 0, 0, 0, 1, 1, 1, 1, 1, 1]])\n"
      ]
     }
    ],
    "source": [
     "def tokenize_input_padding(prompt, tokenizer):\n",
-    "    return tokenizer(prompt, padding='max_length', truncation=True, max_length=20, return_tensors='pt')\n",
+    "    return tokenizer(prompt, padding='max_length', truncation=True, max_length=10, return_tensors='pt')\n",
     "    # return tokenizer(prompt, padding='max_length', truncation=True, return_tensors='pt')\n",
     "    # return tokenizer(prompt, padding=True, return_tensors='pt')\n",
     "    # return tokenizer(prompt, return_tensors= 'pt')\n",
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +86,7 @@
      "output_type": "stream",
      "text": [
       "tensor([29947])\n",
-      "torch.Size([1, 32, 20, 128])\n"
+      "torch.Size([1, 32, 10, 128])\n"
      ]
     }
    ],
@@ -114,32 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 32, 20, 128]) - 29947\n",
-      "torch.Size([1, 32, 21, 128]) - 29900\n",
-      "torch.Size([1, 32, 22, 128]) - 29879\n",
-      "torch.Size([1, 32, 23, 128]) - 29892\n",
-      "torch.Size([1, 32, 24, 128]) - 322\n",
-      "torch.Size([1, 32, 25, 128]) - 29871\n",
-      "torch.Size([1, 32, 26, 128]) - 29900\n",
-      "torch.Size([1, 32, 27, 128]) - 29871\n",
-      "torch.Size([1, 32, 28, 128]) - 29900\n",
-      "torch.Size([1, 32, 29, 128]) - 29900\n",
-      "torch.Size([1, 32, 30, 128]) - 29900\n",
-      "torch.Size([1, 32, 31, 128]) - 29900\n",
-      "torch.Size([1, 32, 32, 128]) - 29900\n",
-      "torch.Size([1, 32, 33, 128]) - 29900\n",
-      "torch.Size([1, 32, 34, 128]) - 29900\n",
-      "torch.Size([1, 32, 35, 128]) - 29900\n",
-      "tensor([[    2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]]) + [29947, 29900, 29879, 29892, 322, 29871, 29900, 29871, 29900, 29900, 29900, 29900, 29900, 29900, 29900, 29900]\n",
-      "My favorite music is  80s, and 0 00000000\n"
+      "torch.Size([1, 32, 10, 128]) - 29947\n",
+      "torch.Size([1, 32, 10, 128]) - 29900\n",
+      "torch.Size([1, 32, 10, 128]) - 29879\n",
+      "torch.Size([1, 32, 10, 128]) - 4696\n",
+      "torch.Size([1, 32, 10, 128]) - 29889\n",
+      "tensor([[    2,     2,     2,     2,     1,  1619, 25448,  4696,   338, 29871]]) + [29947, 29900, 29879, 4696, 29889]\n",
+      "My favorite music is  80s music.\n"
      ]
     }
    ],
@@ -147,7 +134,7 @@
     "# Decoder\n",
     "generated = [last_token_id.item()]\n",
     "print(f'{kv_cache[0][0].shape} - {last_token_id.item()}')\n",
-    "for i in range(15):\n",
+    "for i in range(4):\n",
     "    last_token_id = torch.tensor([[last_token_id]], device=device)\n",
     "    with torch.no_grad():\n",
     "        outputs = model(last_token_id, past_key_values=kv_cache)\n",
@@ -156,6 +143,15 @@
     "    logits = outputs[0]\n",
     "    kv_cache = outputs[1]\n",
     "\n",
+    "    sliced_kv_cache = []\n",
+    "    for layer in kv_cache:\n",
+    "        k = layer[0]\n",
+    "        v = layer[1]\n",
+    "        sliced_k = k[:, :, 1:, :]\n",
+    "        sliced_v = v[:, :, 1:, :]\n",
+    "        sliced_kv_cache.append( (sliced_k, sliced_v) )\n",
+    "\n",
+    "    kv_cache = tuple(sliced_kv_cache)\n",
     "\n",
     "    last_token_id = torch.argmax(logits[:, -1, :], dim=-1)\n",
     "    print(f'{kv_cache[0][0].shape} - {last_token_id.item()}')\n",
